--- a/src/Assignment-1/assignment1.css
+++ b/src/Assignment-1/assignment1.css
@@ -5,3 +5,14 @@
 width: 100%;
 height: 100%;
 }
+.row{
+    display :flex;
+}
+.column{
+    width:50%;
+
+}
+.image{
+    height: 450px;
+    margin: 5px;
+}
