--- a/src/Assignment-2/assignment2.css
+++ b/src/Assignment-2/assignment2.css
@@ -5,3 +5,85 @@
 width: 100%;
 height: 100%;
 }
+header{
+    padding-top:1%;
+    width:99%;
+    height:200px;
+    border-style: solid;
+    border-width:2px;
+    border-color:black;
+  }
+
+  .row1{
+    width: 100%;
+    display: inline-table;
+    border-color: black;
+    background-color: #DAB71A;
+    
+  }
+  img{
+    width:5%;
+    height:5%;
+    padding-top: 3%;
+    padding-left: 2%;
+    float: left;
+  }
+
+  form{
+    float: right;
+    margin:2%;
+    padding-top: 60px;
+  }
+
+  nav{
+    border-style: solid;
+    border-width: 2px;
+    text-align: center;
+    word-spacing: 80px;
+    padding-top: 25px;
+    
+  }
+
+  .aside-left{
+    border-style: solid;
+    border-width:2px;
+    float:left;
+    margin-top: 15px;
+    line-height: 35px;
+    padding-left: 2%;
+    padding-right: 4%;
+  }
+
+  #main-content-section{
+    
+    margin-top: 15px;
+    margin-left: 1%;
+    margin-right: 1%;
+    height:525px;
+    width:72%;
+    border-style:solid;
+    border-width: 2px;
+  }
+  .post-img{
+    width: 30%;
+    height: 230px;
+  }
+  #right-sidebar-menu{
+   
+    margin-top:15px;
+    float:right;
+    border-style: solid;
+    border-width: 2px;
+    padding-right: 80px;
+    height:525px;
+    line-height: 35px;
+  }
+  .div{
+    display: flex;
+  }
+  #page-footer{
+    width:99%;
+    border:solid;
+    border-width: 2px;
+    margin-top: 15px;
+  }
