--- a/src/Assignment-3/assignment3.css
+++ b/src/Assignment-3/assignment3.css
@@ -5,3 +5,54 @@
 width: 100%;
 height: 100%;
 }
+.full-width-container{
+    width:100%;
+    height:400px;
+    background-color: #f2f2f2;
+    padding-bottom: 1%;
+
+}
+.column{
+    float:left;
+    width:48%;
+    margin-left: 2%;
+    padding-top: 5%;
+}
+.column2{
+    float:right;
+    width:48%;
+    padding-top:3%;
+    padding-left: 2%;
+}
+.button{
+    background-color: black;
+    color:white;
+    width:17%;
+    height: 40px;
+}
+.button:hover{
+    background-color:azure;
+    color:black;
+}
+#render-wiki{
+    width:650px;
+    height:330px;
+}
+#render-dictionary{
+    width: 650px;
+    height:330px;
+}
+.row{
+    width:100%;
+    padding-top: 2%;
+    text-align: center;
+}
+.row2{
+    width:100%;
+    padding-left:25%;
+    margin: 2%;
+}
+.padding{
+    padding-left: 20%;
+    padding-right: 20%;
+}
