--- a/src/Assignment-4/assignment4.css
+++ b/src/Assignment-4/assignment4.css
@@ -78,6 +78,10 @@
 	    width:35px;
 	    margin-top:8px;
 	}
+	h1{
+		font-size:xx-large;
+		padding-bottom: 20px;
+	}
 	nav li{
 	    display:inline-block;
 	    padding:15px 10px;
@@ -89,13 +93,11 @@
 	    background-color: #3f8da7;
 	}
 	#hero{
-	    background: url("./assests/images/backgrd.jpg") no-repeat;
+	    background: url("./assets/images/backgrd.jpg") no-repeat;
 	    background-size: cover;
 	    text-align: center;
 	    padding:50px 0px;
 	    margin-bottom: 50px;
-	
-
 	}
 	#hero img{
 	    border:5px solid #3f8da7;
@@ -104,9 +106,10 @@
 	    margin:auto;
 	    margin-bottom: 25px;
 	}
-	#hero h2{
+	h2{
 	    font-size:30px;
-	    margin-bottom: 25px;
+	    margin-bottom: 5px;
+		color:#3f8da7;
 	}
 	.btn{
 	    background-color: white;
@@ -145,47 +148,10 @@
 	    padding: 20px 0px;
 	    text-align: center;
 	}
-	footer ul{
-	    margin:40px 0;
+	footer img{
+		width:50px;
+		height: 50px;
 	}
-	footer li{
-	    display:inline-block;
-	    margin:0 25px;
-	   
+	footer a{
+		text-decoration: underline;
 	}
-	/*
-	header{
-	    background-color: darkcyan;
-	    width:100%;
-	    height:80px;
-	}
-	nav{
-	    text-decoration: none;
-	    float:right;
-	    
-	}
-	.QuickAccess{
-	    display: table-row;
-	    text-decoration-color: none;
-	}
-	.main-section{
-	    width:100%;
-	    height:400px;
-	
-	    background-image: url(.\assests\images\hero-unit.jpg);
-	    margin-bottom:20px;
-	}
-	
-	.sub-section{
-	    width:30%;
-	    background-color: burlywood;
-	    margin: 20px;
-	}
-	footer{
-	    width:100%;
-	    height:100px;
-	    background-color: darkcyan;
-	}
-	*/
-
-
